// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hero Banner Simple - grey renders correctly 1`] = `
<section
  class="ecl-hero-banner ecl-hero-banner--grey ecl-hero-banner--centered"
>
  <div
    class="ecl-container"
  >
    <div
      class="ecl-hero-banner__container"
    >
      <div
        class="ecl-hero-banner__content"
      >
        <div
          class="ecl-hero-banner__title"
        >
          EU Budget for the future
        </div>
        <p
          class="ecl-hero-banner__description"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-hero-banner__link-cta"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</section>
`;

exports[`Hero Banner Simple - primary renders correctly 1`] = `
<section
  class="ecl-hero-banner ecl-hero-banner--primary ecl-hero-banner--centered"
>
  <div
    class="ecl-container"
  >
    <div
      class="ecl-hero-banner__container"
    >
      <div
        class="ecl-hero-banner__content"
      >
        <div
          class="ecl-hero-banner__title"
        >
          EU Budget for the future
        </div>
        <p
          class="ecl-hero-banner__description"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-hero-banner__link-cta"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</section>
`;

exports[`Hero Banner Simple - white renders correctly 1`] = `
<section
  class="ecl-hero-banner ecl-hero-banner--white ecl-hero-banner--centered"
>
  <div
    class="ecl-container"
  >
    <div
      class="ecl-hero-banner__container"
    >
      <div
        class="ecl-hero-banner__content"
      >
        <div
          class="ecl-hero-banner__title"
        >
          EU Budget for the future
        </div>
        <p
          class="ecl-hero-banner__description"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-hero-banner__link-cta"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</section>
`;

exports[`Hero Banner Simple renders correctly with extra attributes 1`] = `
<section
  class="ecl-hero-banner ecl-hero-banner--primary ecl-hero-banner--centered"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <div
    class="ecl-container"
  >
    <div
      class="ecl-hero-banner__container"
    >
      <div
        class="ecl-hero-banner__content"
      >
        <div
          class="ecl-hero-banner__title"
        >
          EU Budget for the future
        </div>
        <p
          class="ecl-hero-banner__description"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-hero-banner__link-cta"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</section>
`;

exports[`Hero Banner Simple renders correctly with extra class names 1`] = `
<section
  class="ecl-hero-banner ecl-hero-banner--primary ecl-hero-banner--centered custom-class custom-class--test"
>
  <div
    class="ecl-container"
  >
    <div
      class="ecl-hero-banner__container"
    >
      <div
        class="ecl-hero-banner__content"
      >
        <div
          class="ecl-hero-banner__title"
        >
          EU Budget for the future
        </div>
        <p
          class="ecl-hero-banner__description"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-hero-banner__link-cta"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</section>
`;

exports[`Hero Banner image - gradient renders correctly 1`] = `
<section
  class="ecl-hero-banner ecl-hero-banner--image-gradient ecl-hero-banner--centered"
>
  <div
    class="ecl-hero-banner__image"
    style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
  />
  <div
    class="ecl-container"
  >
    <div
      class="ecl-hero-banner__container"
    >
      <div
        class="ecl-hero-banner__content"
      >
        <div
          class="ecl-hero-banner__title"
        >
          EU Budget for the future
        </div>
        <p
          class="ecl-hero-banner__description"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-hero-banner__link-cta"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</section>
`;

exports[`Hero Banner image - shade renders correctly 1`] = `
<section
  class="ecl-hero-banner ecl-hero-banner--image-shade ecl-hero-banner--centered"
>
  <div
    class="ecl-hero-banner__image"
    style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
  />
  <div
    class="ecl-container"
  >
    <div
      class="ecl-hero-banner__container"
    >
      <div
        class="ecl-hero-banner__content"
      >
        <div
          class="ecl-hero-banner__title"
        >
          EU Budget for the future
        </div>
        <p
          class="ecl-hero-banner__description"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-hero-banner__link-cta"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</section>
`;

exports[`Hero Banner image - text-box renders correctly 1`] = `
<section
  class="ecl-hero-banner ecl-hero-banner--image ecl-hero-banner--centered"
>
  <div
    class="ecl-hero-banner__image"
    style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
  />
  <div
    class="ecl-container"
  >
    <div
      class="ecl-hero-banner__container"
    >
      <div
        class="ecl-hero-banner__content"
      >
        <div
          class="ecl-hero-banner__title"
        >
          EU Budget for the future
        </div>
        <p
          class="ecl-hero-banner__description"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-hero-banner__link-cta"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</section>
`;

exports[`Hero Banner image renders correctly with extra attributes 1`] = `
<section
  class="ecl-hero-banner ecl-hero-banner--image ecl-hero-banner--centered"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <div
    class="ecl-hero-banner__image"
    style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
  />
  <div
    class="ecl-container"
  >
    <div
      class="ecl-hero-banner__container"
    >
      <div
        class="ecl-hero-banner__content"
      >
        <div
          class="ecl-hero-banner__title"
        >
          EU Budget for the future
        </div>
        <p
          class="ecl-hero-banner__description"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-hero-banner__link-cta"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</section>
`;

exports[`Hero Banner image renders correctly with extra class names 1`] = `
<section
  class="ecl-hero-banner ecl-hero-banner--image ecl-hero-banner--centered custom-class custom-class--test"
>
  <div
    class="ecl-hero-banner__image"
    style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
  />
  <div
    class="ecl-container"
  >
    <div
      class="ecl-hero-banner__container"
    >
      <div
        class="ecl-hero-banner__content"
      >
        <div
          class="ecl-hero-banner__title"
        >
          EU Budget for the future
        </div>
        <p
          class="ecl-hero-banner__description"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-hero-banner__link-cta"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Subscribe
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</section>
`;
